# simn

./: CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
content/: NOTICE.md
crates/simn-godot/: Cargo.toml  build.rs
crates/simn-godot/src/: lib.rs  los.rs  network.rs  physics_setup.rs  regional.rs  terrain.rs  util.rs
crates/simn-godot/src/sim/: conversions.rs  mod.rs
crates/simn-net/: Cargo.toml
crates/simn-net/src/: lib.rs  protocol.rs  session.rs
crates/simn-sim/: Cargo.toml
crates/simn-sim/content/: NOTICE.md  chatter_lines.toml  cover_materials.toml  equipment_slots.toml  factions.toml  npc_loadouts.toml  recipes.toml
crates/simn-sim/content/items/: ammo.toml  attachments.toml  containers.toml  food.toml  loot_pools.toml  magazines.toml  tools.toml
crates/simn-sim/examples/: watch.rs
crates/simn-sim/src/: action.rs  behavior_config.rs  chronicle.rs  components.rs  content.rs  cover.rs  delta.rs  det_serde.rs  goap.rs  goap_actions.rs  helpers.rs  inventory_grid.rs  items.rs  lib.rs  loot_containers.rs  loot_pools.rs  los_cache.rs  names.rs  nav.rs  npc_loadouts.rs  offline_tier.rs  patrol_zone.rs  pda_log.rs  perception.rs  poi.rs  region.rs  resources.rs  snapshot.rs  squad_blackboard.rs  world_event_bus.rs  world_seed.rs
crates/simn-sim/src/faction/: mod.rs  registry.rs
crates/simn-sim/src/persistence/: format.rs  journal.rs  mod.rs  snapshot.rs  snapshot_writer.rs
crates/simn-sim/src/systems/: base_capture.rs  broadcast_npc_positions.rs  clock.rs  contamination.rs  crafting.rs  goal_arbitration.rs  inventory.rs  kill_credits.rs  loot_restock.rs  meds.rs  mod.rs  npc_age.rs  npc_aggro.rs  npc_combat.rs  npc_death_check.rs  npc_goals.rs  npc_index.rs  npc_join_group.rs  npc_migrate.rs  npc_portal_cross.rs  npc_spatial_hash.rs  npc_spawn.rs  npc_tactical.rs  stamina.rs  survival.rs  terrain.rs  threat_board.rs  weather.rs  world_time.rs  wounds.rs
crates/simn-sim/src/worker/: command.rs  mod.rs  runtime.rs  view.rs
crates/simn-sim/src/world/: containers.rs  debug.rs  drugs.rs  hitbox.rs  inventory.rs  mod.rs  npc_view.rs  persistence.rs  player.rs  population.rs  projectiles.rs  registration.rs  replication.rs  survival.rs  tick.rs  weapons.rs  wounds.rs
crates/simn-sim/tests/: accuracy_combat.rs  attachments.rs  authored_bases.rs  authored_containers.rs  ballistics_matrix.rs  behavior_chain.rs  caliber_class.rs  command_dispatch.rs  determinism.rs  effects.rs  endurance_bleed.rs  factions.rs  food.rs  interaction_areas.rs  inventory.rs  leadership_cohesion.rs  limb_state.rs  lived_experience.rs  loot_containers.rs  loot_pools.rs  loot_restock.rs  nav_mask_e2e.rs  network_replay.rs  npc_character.rs  npc_names.rs  npc_projectiles.rs  npc_rank.rs  npcs.rs  offline_combat.rs  offline_movement.rs  offline_waypoint_routing.rs  pathfinding.rs  pda_events.rs  perception_sight.rs  persistence.rs  personality_traits.rs  projectiles.rs  projection.rs  scene_authored_gating.rs  snapshot_pair.rs  (+8 more)
crates/simn-terrain/: Cargo.toml
crates/simn-terrain/examples/: canonical_to_png.rs  generate_test_maps.rs  png_to_canonical.rs  terrain_bake.rs  terrain_watch.rs
crates/simn-terrain/src/: bake.rs  convert.rs  features.rs  heightmap.rs  lib.rs  metadata.rs  nav_mask.rs  osm.rs  road_density.rs  sampler.rs  spec.rs  splatmap.rs  terrarium.rs  usgs3dep.rs
crates/simn-terrain/tests/: load_and_sample.rs  nav_mask_io.rs
(+44 files in other folders)
