[package]
name = "simn-sim"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
simn-common = { path = "../simn-common" }
simn-terrain = { path = "../simn-terrain" }
bevy_ecs = "0.18"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
include_dir = "0.7"
bincode = "1.3"
blake3 = "1.8"
crc32fast = "1.5"
pathfinding = "4"
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
rand_chacha = "0.3"
rayon = "1.10"
crossbeam-channel = "0.5"
arc-swap = "1.7"
tracing.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[[example]]
name = "watch"
path = "examples/watch.rs"
