[package]
name = "simn-terrain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
serde = { version = "1", features = ["derive"] }
toml = "0.8"
blake3 = "1.8"
png = "0.17"
tiff = "0.11"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
notify = "7"
noise = "0.9"

[[example]]
name = "generate_test_maps"
path = "examples/generate_test_maps.rs"

[[example]]
name = "terrain_bake"
path = "examples/terrain_bake.rs"

[[example]]
name = "canonical_to_png"
path = "examples/canonical_to_png.rs"

[[example]]
name = "png_to_canonical"
path = "examples/png_to_canonical.rs"

[[example]]
name = "terrain_watch"
path = "examples/terrain_watch.rs"

[[bin]]
name = "migrate_canonical_format"
path = "src/bin/migrate_canonical_format.rs"
